--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 == soap4r
 
-A version of soap4r to run with Ruby 1.9.3 fixing "XML processor module not found" error.
+A version of soap4r to run with Ruby 1.9.3 fixing "XML processor module not found" error (thanks to torsten_on_rails).
